fix default not align

--- a/styles/global.css
+++ b/styles/global.css
@@ -19,7 +19,6 @@ h3 {
 }
 p {
   font-size: 17px;
-  text-align: justify;
 }
 body {
   font-family: 'Quicksand', sans-serif;
