--- a/styles/project.module.css
+++ b/styles/project.module.css
@@ -40,6 +40,7 @@
   text-align: left;
   padding: 25px;
   width: 100%;
+  text-align: justify;
 }
 
 .projectStack {
